<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.pixi.collab</groupId>
  <artifactId>collab-server</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>collab-server</name>

  <organization>
    <name>GaTech, GVU, PIXI</name>
    <url>http://www.cc.gatech.edu/pixi/</url>
  </organization>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tomcat.httpPort>9080</tomcat.httpPort>
    <tomcat.httpsPort>9443</tomcat.httpsPort>
    <jslint.skip>false</jslint.skip>

    <slf4j.version>1.7.5</slf4j.version>
    <logback.version>1.0.13</logback.version>
    <shiro.version>1.2.2</shiro.version>
    <buildnumber-maven-plugin.version>1.2</buildnumber-maven-plugin.version>
    <jersey.version>2.5.1</jersey.version>
    <guice-bridge.version>2.2.0-b24</guice-bridge.version>
    <jasmine-plugin.version>1.3.1.3</jasmine-plugin.version>
    <jackson-jaxrs-json-provider.version>2.3.1</jackson-jaxrs-json-provider.version>
    <google-api.version>1.18.0-rc</google-api.version>

    <h2.version>1.4.185</h2.version>
    <hibernate.version>4.3.1.Final</hibernate.version>
    <hibernate-validator.version>5.0.2.Final</hibernate-validator.version>
    <jooq.version>3.3.1</jooq.version>
    <postgres.version>9.4-1200-jdbc4</postgres.version>

    <tomcat.version>7.0.50</tomcat.version>
    <typesafeconfig-for-webapps.version>1.1</typesafeconfig-for-webapps.version>
    <jcabi-manifests.version>1.1</jcabi-manifests.version>
  </properties>

  <dependencies>
    <!-- Test -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.8.5</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.9.5</version>
      <scope>test</scope>
    </dependency>

    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>[1.0,)</version>
      <scope>provided</scope>
    </dependency>

    <!-- Hibernate -->
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>${hibernate-validator.version}</version>
    </dependency>

    <!-- Servlet -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet.jsp</groupId>
      <artifactId>jsp-api</artifactId>
      <version>2.1</version>
      <scope>provided</scope>
    </dependency>

    <!-- Guice -->
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>3.0</version>
    </dependency>

    <dependency>
      <groupId>com.google.inject.extensions</groupId>
      <artifactId>guice-servlet</artifactId>
      <version>3.0</version>
    </dependency>

    <!-- Jersey -->
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet-core</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-multipart</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.ext</groupId>
      <artifactId>jersey-mvc-jsp</artifactId>
      <version>${jersey.version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.hk2</groupId>
      <artifactId>guice-bridge</artifactId>
      <version>${guice-bridge.version}</version>
    </dependency>

    <!-- Jackson -->
    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-json-provider</artifactId>
      <version>${jackson-jaxrs-json-provider.version}</version>
    </dependency>

    <!-- Guava -->
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>15.0</version>
    </dependency>

    <!-- Quartz -->
    <dependency>
      <groupId>org.quartz-scheduler</groupId>
      <artifactId>quartz</artifactId>
      <version>2.2.1</version>
    </dependency>

    <dependency>
      <groupId>org.99soft.guice</groupId>
      <artifactId>guartz</artifactId>
      <version>1.3</version>
    </dependency>


    <!-- UrlRewrite -->
    <dependency>
      <groupId>org.tuckey</groupId>
      <artifactId>urlrewritefilter</artifactId>
      <version>4.0.3</version>
    </dependency>

    <!-- Commons -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
    </dependency>

    <!-- Google API -->
    <dependency>
      <groupId>com.google.api-client</groupId>
      <artifactId>google-api-client</artifactId>
      <version>${google-api.version}</version>
    </dependency>

    <dependency>
      <groupId>com.google.http-client</groupId>
      <artifactId>google-http-client-jackson2</artifactId>
      <version>${google-api.version}</version>
    </dependency>

    <dependency>
      <groupId>com.typesafe</groupId>
      <artifactId>config</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>edu.gatech.gtri.typesafeconfig-extensions</groupId>
      <artifactId>typesafeconfig-for-webapps</artifactId>
      <version>${typesafeconfig-for-webapps.version}</version>
    </dependency>

    <dependency>
      <groupId>com.mchange</groupId>
      <artifactId>c3p0</artifactId>
      <version>0.9.5-pre6</version>
    </dependency>

    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq</artifactId>
      <version>${jooq.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq-meta</artifactId>
      <version>${jooq.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jooq</groupId>
      <artifactId>jooq-codegen</artifactId>
      <version>${jooq.version}</version>
    </dependency>

    <dependency>
      <groupId>org.atmosphere</groupId>
      <artifactId>atmosphere-jersey</artifactId>
      <version>2.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.atmosphere</groupId>
      <artifactId>atmosphere-guice</artifactId>
      <version>2.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.16.2</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>com.jcabi</groupId>
      <artifactId>jcabi-manifests</artifactId>
      <version>${jcabi-manifests.version}</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>collab</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <inherited>true</inherited>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.googlecode.jslint4java</groupId>
        <artifactId>jslint4java-maven-plugin</artifactId>
        <version>2.0.5</version>
        <executions>
          <execution>
            <phase>process-sources</phase>
            <goals>
              <goal>lint</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <skip>${jslint.skip}</skip>
          <sourceFolders>
            <sourceFolder>${basedir}/src/main/webapp/modules</sourceFolder>
          </sourceFolders>
          <options>
            <formatter type="plain"/>
            <browser>true</browser>
            <indent>4</indent>
            <unparam>true</unparam>
            <regexp>true</regexp>
            <predef>angular</predef>
            <plusplus>true</plusplus>
            <es5>true</es5>
          </options>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.11</version>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <configuration>
              <configLocation>${basedir}/checkstyle.xml</configLocation>
              <encoding>UTF-8</encoding>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <linkXRef>false</linkXRef>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>h2</id>
      <properties>
        <database.driver>org.h2.Driver</database.driver>
        <database.url>jdbc:h2:${project.basedir}/target/database/database</database.url>
        <database.username/>
        <database.password/>
      </properties>

      <dependencies>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>${h2.version}</version>
          <scope>compile</scope>
        </dependency>
      </dependencies>
    </profile>

    <profile>
      <id>postgresql</id>
      <properties>
        <database.driver>org.postgresql.Driver</database.driver>
        <database.url/>
        <database.username/>
        <database.password/>
      </properties>

      <dependencies>
        <dependency>
          <groupId>org.postgresql</groupId>
          <artifactId>postgresql</artifactId>
          <version>${postgres.version}</version>
        </dependency>
      </dependencies>
    </profile>

    <profile>
      <id>generate-db</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>2.6</version>
            <executions>
              <execution>
                <id>copy-database</id>
                <phase>initialize</phase>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <configuration>
                  <outputDirectory>target/database</outputDirectory>
                  <resources>
                    <resource>
                      <directory>src/development/database</directory>
                      <filtering>true</filtering>
                    </resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>sql-maven-plugin</artifactId>
            <version>1.5</version>
            <dependencies>
              <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
              </dependency>
            </dependencies>

            <configuration>
              <driver>${database.driver}</driver>
              <url>${database.url}</url>
              <username>${database.username}</username>
              <password>${database.password}</password>
            </configuration>

            <executions>
              <execution>
                <id>create-schema</id>
                <phase>generate-sources</phase>
                <goals>
                  <goal>execute</goal>
                </goals>
                <configuration>
                  <autocommit>true</autocommit>
                  <srcFiles>
                    <srcFile>target/database/database.sql</srcFile>
                  </srcFiles>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.jooq</groupId>
            <artifactId>jooq-codegen-maven</artifactId>
            <version>${jooq.version}</version>
            <executions>
              <execution>
                <goals>
                  <goal>generate</goal>
                </goals>
              </execution>
            </executions>

            <dependencies>
              <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
                <scope>compile</scope>
              </dependency>
            </dependencies>

            <configuration>
              <jdbc>
                <driver>${database.driver}</driver>
                <url>${database.url}</url>
                <user/>
                <password/>
              </jdbc>

              <generator>
                <name>org.jooq.util.JavaGenerator</name>
                <database>
                  <name>org.jooq.util.h2.H2Database</name>
                  <includes>.*</includes>
                  <excludes/>
                  <inputSchema>COLLAB</inputSchema>
                </database>

                <target>
                  <packageName>org.pixi.collab.entity</packageName>
                  <directory>target/generated-sources/jooq</directory>
                </target>
              </generator>
            </configuration>

          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <activation>
        <property>
          <name>release</name>
        </property>
      </activation>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.lesscss</groupId>
            <artifactId>lesscss-maven-plugin</artifactId>
            <version>1.3.3</version>
            <configuration>
              <sourceDirectory>${project.basedir}/src/main/webapp/css</sourceDirectory>
              <outputDirectory>${project.build.directory}/${project.build.finalName}/css</outputDirectory>
              <compress>true</compress>
              <lessJs>${project.basedir}/src/main/webapp/public/lib/less/less-1.6.1.min.js</lessJs>
              <includes>
                <include>styles.less</include>
              </includes>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>compile</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <version>2.4</version>
            <configuration>
              <webResources>
                <resource>
                  <directory>src/release/webapp</directory>
                </resource>
              </webResources>
              <warSourceExcludes>**/*.css</warSourceExcludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <activation>
        <property>
          <name>!release</name>
        </property>
      </activation>
      <id>development</id>
      <build>
        <resources>
          <resource>
            <directory>src/development/resources</directory>
            <filtering>true</filtering>
          </resource>
          <resource>
            <directory>src/main/resources</directory>
          </resource>
        </resources>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>keytool-maven-plugin</artifactId>
            <version>1.4</version>
            <executions>
              <execution>
                <goals>
                  <goal>generateKeyPair</goal>
                </goals>
                <phase>generate-resources</phase>
              </execution>
            </executions>
            <configuration>
              <skipIfExist>true</skipIfExist>
              <keystore>${basedir}/target/keystore</keystore>
              <dname>cn=www.pixi.org,ou=None,L=Atlanta,ST=Georgia,o=PIXI,c=US</dname>
              <keypass>development</keypass>
              <storepass>development</storepass>
              <alias>PIXI</alias>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.tomcat.maven</groupId>
            <artifactId>tomcat7-maven-plugin</artifactId>
            <version>2.2</version>
            <configuration>
              <systemProperties>
                <java_opts>-XX:MaxPermSize=1G -XX:PermSize=1G</java_opts>
              </systemProperties>
              <httpsPort>${tomcat.httpsPort}</httpsPort>
              <path>/collab</path>

              <keystoreFile>${basedir}/target/keystore</keystoreFile>
              <keystorePass>development</keystorePass>
            </configuration>
            <dependencies>
              <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-core</artifactId>
                <version>${tomcat.version}</version>
              </dependency>

              <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-logging-juli</artifactId>
                <version>${tomcat.version}</version>
              </dependency>

              <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-logging-log4j</artifactId>
                <version>${tomcat.version}</version>
              </dependency>

              <dependency>
                <groupId>org.apache.tomcat.embed</groupId>
                <artifactId>tomcat-embed-jasper</artifactId>
                <version>${tomcat.version}</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
